--- a/lib/screens/news.txt
+++ b/lib/screens/news.txt
@@ -4,12 +4,12 @@
 {mud}                ^                    ^^^^^                   ^  {/}
 {mud}               ^^^                  ^^^^^^^                 ^^^ {/}
 {mud}              ^^^^^                ^^^^^^^^^               ^^^^^{/}
-{mud}             ^^^^  {/}{red}_{/}{mud}              ^ {/}{red}_{/}{mud}  ^^^^^^             {/}{red}_{/}{mud}  ^^^^{/}
-{mud}            ^^^^ {/}{red} / \   _ __   __ _| |__   __ _ _ __   __| | {/}{mud}^^^^^   {/}
-{mud}           ^^^^ {/}{red} / _ \ | '_ \ / _` | '_ \ / _` | '_ \ / _` | {/}{mud}^^^^^^  {/}
-{mud}          ^^^^  {/}{red}/ ___ \| | | | (_| | |_) | (_| | | | | (_| | {/}{mud}^^^^^^^ {/}
-{mud}         ^^^^  {/}{red}/_/   \_\_| |_|\__, |_.__/ \__,_|_| |_|\__,_| {/}{mud}^^^^^^^^{/}
-{mud}        ^^^^^                {/}{red} |___/{/}  $VERSION
+{mud}             {/}{red}_______  _{/}{mud}           ^^^^ {/}{red}_{/}{mud} ^^^^                {/}{red}_{/}{mud} ^^{/}
+{mud}            {/}{red}'___ ___'/ \   _ __   __ _| |__   __ _ _ __   __| | {/}{mud}^^   {/}
+{mud}           ^^^^{/}{red}| |  / _ \ | '_ \ / _` | '_ \ / _` | '_ \ / _` | {/}{mud}^^^  {/}
+{mud}          ^^^^ {/}{red}| | / ___ \| | | | (_| | |_) | (_| | | | | (_| | {/}{mud}^^^^ {/}
+{mud}         ^^^^  {/}{red}|_|/_/   \_\_| |_|\__, |_.__/ \__,_|_| |_|\__,_| {/}{mud}^^^^^{/}
+{mud}        ^^^^^                   {/}{red} |___/{/}  $VERSION
 {mud}       ^^^^^^^^^^^^^^^^^^                     ^^^^  ^^^^^^^^^^^^^^^^^^^ {/}
 {light slate}         "When the world is old and the Powers grow weary, then Morgoth,{/}
 {light slate}          seeing that the guard sleepeth, shall come back through the   {/}
